--- a/html-css/module04/css/styles.css
+++ b/html-css/module04/css/styles.css
@@ -31,7 +31,7 @@ h2 {
   margin-bottom: 50px;
 }
 
-.first-article {
+.left-article {
   color: #4e5050;
   margin-right: 50px;
   width: 70%;
@@ -44,7 +44,7 @@ img {
   float: left;
 }
 
-.list {
+.right-article {
   color: #4e5050;
   display: inline-block;
   width: 24%;
@@ -67,9 +67,13 @@ img {
   line-height: 30px;
 }
 
-.list h3 {
+.box {
   display: inline-block;
+  width: calc(100% - 46px);
   vertical-align: top;
+}
+
+.list h3 {
   color: #263555;
   margin-bottom: 10px;
   font-size: 15pt;
@@ -85,8 +89,6 @@ img {
 
 .list p {
   color: #4e5050;
-  display: inline-block;
-  
 }
 /*-----BOTTOM PART-----*/
 .bottom-part {
@@ -132,11 +134,11 @@ img {
   text-align: center;
 }
 
-.excerption p:before{
+.excerption p:before {
   content: "  " "\0022" " ";
 }
 
-.excerption p:after{
+.excerption p:after {
   content: " " "\0022";
 }
 
@@ -154,10 +156,11 @@ img {
 
 .columns li:before {
   content: "\2192";
+  color: #38afe5;
   padding-right: 5px;
 }
 
-.columns li:last-child {
+.columns li:nth-child(5) {
   margin: 0;
 }
 
