--- a/html-css/module-05/css/styles.css
+++ b/html-css/module-05/css/styles.css
@@ -32,7 +32,7 @@
 }
 
 .menu-item:nth-child(3) {
- margin-right: 250px;
+  margin-right: 250px;
 }
 
 .menu-item a:hover {
@@ -71,26 +71,158 @@
 }
 
 .logo p {
-    display: inline-block;
-    background-color: #fff;
-    width: 140px;
-    height: 140px;
-    line-height: 140px;
-    border-radius: 50%;
-    text-align: center;
-    text-transform: uppercase;
-    color: #263555;
-    font-size: 60px;
-    font-family: "Dorsa";
-    margin: 10px;
-    transform: translateX(620%) translateY(-100%);
-    position: absolute;
-  }
+  display: inline-block;
+  background-color: #fff;
+  width: 140px;
+  height: 140px;
+  line-height: 140px;
+  border-radius: 50%;
+  text-align: center;
+  text-transform: uppercase;
+  color: #263555;
+  font-size: 60px;
+  font-family: "Dorsa";
+  margin: 10px;
+  transform: translateX(620%) translateY(-105%);
+  position: absolute;
+}
 
 /*-----MAIN-----*/
 .main {
   width: 1020px;
   margin: auto;
-  padding: 100px 37px 40px 37px;
+  padding: 60px 00px 60px 0px;
   background-color: #fff;
+}
+
+.section-carousel {
+  text-transform: uppercase;
+}
+
+.carousel {
+  width: 900px;
+  margin: 0px 50px 50px 50px;
+}
+
+img {
+  display: block;
+  height: 600px;
+  width: 100%;
+  object-fit: cover;
+}
+
+.slick-arrow {
+  border: 0;
+  position: absolute;
+  height: 50px;
+  width: 60px;
+  z-index: 2;
+  background-color: #38afe5;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.slick-arrow:hover {
+  background-color: #fff;
+  color: #38afe5;
+}
+
+.slick-prev {
+  bottom: 50px;
+  right: 840px;
+  height: 40px;
+  border-top-right-radius: 40%;
+  border-bottom-right-radius: 40%;
+}
+
+.slick-prev::before {
+  content: "\21a9";
+  transform: translateX(54%) translateY(5%);
+  position: absolute;
+}
+
+.slick-next {
+  bottom: 50px;
+  right: -1px;
+  height: 40px;
+  border-bottom-left-radius: 40%;
+  border-top-left-radius: 40%;
+}
+
+.slick-next::before {
+  content: "\21aa";
+  transform: translateX(54%) translateY(5%);
+  position: absolute;
+}
+
+.title {
+  display: inline-block;
+  font-size: 22px;
+  color: var(--main-font-color);
+  background-color: var(--second-font-color);
+  padding: 10px;
+  transform: translateX(24%) translateY(-700%);
+  position: absolute;
+}
+
+.subtitle {
+  display: inline-block;
+  font-size: 34px;
+  color: var(--second-font-color);
+  background-color: #38afe5;
+  padding: 10px;
+  transform: translateX(19%) translateY(-442%);
+  position: absolute;
+}
+
+.article {
+  width: 900px;
+  margin: 0px 50px 0px 50px;
+}
+
+.article h2 {
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
+.gallery img {
+  display: inline-block;
+  width: 290px;
+  height: 290px;
+  margin-right: 10px;
+  position: relative;
+}
+
+.gallery img:last-child {
+  margin-right: 0px;
+}
+
+.pop-up-block {
+  display: none;
+  position: absolute;
+  background-color: #193149;
+  color: var(--second-font-color);
+  font-size: 13px;
+  z-index: 2;
+  width: 145px;
+  height: 270px;
+  line-height: 1.5;
+  text-align: center;
+  font-weight: var(--main-font-weight);
+  padding: 10px;
+}
+
+.pop-up-block p {
+  font-weight: var(--main-font-weight);
+  text-align: justify;
+}
+
+.pop-up-block h2 {
+  text-transform: uppercase;
+  font-size: 30px;
+  font-weight: var(--main-font-weight);
+}
+
+.article:hover > .pop-up-block {
+  display: block;
 }
