--- a/html-css/module-05/css/styles.css
+++ b/html-css/module-05/css/styles.css
@@ -85,13 +85,17 @@
   border-radius: 50%;
   text-align: center;
   text-transform: uppercase;
-  color: #263555;
   font-size: 60px;
   font-family: "Dorsa";
   transform: translateX(-50%) translateY(-50%);
   top: 50%;
   left: 50%;
   position: absolute;
+}
+
+.logo a {
+  text-decoration: none;
+  color: #263555;
 }
 
 /*-----MAIN-----*/
