--- a/html-css/module-05/css/styles.css
+++ b/html-css/module-05/css/styles.css
@@ -106,10 +106,11 @@
   background-color: #fff;
 }
 
-.carousel {
-  text-transform: uppercase;
+.section-carousel {
   margin-bottom: 50px;
+  text-transform: uppercase;
 }
+
 
 img {
   display: block;
