--- a/html-css/module-06/css/styles.css
+++ b/html-css/module-06/css/styles.css
@@ -13,7 +13,7 @@
   width: 950px;
   margin: auto;
   padding: 100px 37px 40px 37px;
-  background-color: #fff;
+  background-color: var(--main-background-color);
 }
 
 .top-part,
@@ -117,13 +117,12 @@ h2 {
   margin: 2px;
 }
 
-
 .logo {
-  top:50%;
+  top: 50%;
   left: 50%;
   position: absolute;
   transform: translateX(-50%) translateY(-50%);
-  background-color: #fff;
+  background-color: var(--main-background-color);
   width: 140px;
   height: 140px;
   line-height: 140px;
@@ -132,6 +131,11 @@ h2 {
   text-transform: uppercase;
   font-size: 60px;
   font-family: "Dorsa";
+}
+
+.logo a:hover {
+  color: var(--hover-color);
+  transition-duration: 0.2s;
 }
 
 .logo a {
@@ -146,7 +150,7 @@ h2 {
 }
 
 .subtitle {
-  color: #263555;
+  color: var(--main-font-color);
   font-size: 17px;
   margin-bottom: 10px;
 }
@@ -174,7 +178,7 @@ img {
   margin-right: 10px;
   border-radius: 50%;
   background-color: #38afe5;
-  color: #fff;
+  color: var(--second-font-color);
   text-align: center;
   line-height: 30px;
 }
@@ -184,7 +188,7 @@ img {
 }
 
 .list h3 {
-  color: #263555;
+  color: var(--main-font-color);
   margin-bottom: 10px;
   font-size: 15pt;
 }
@@ -217,7 +221,7 @@ img {
 }
 
 .excerption p {
-  color: #263555;
+  color: var(--main-font-color);
   border: 1px solid #dedbdb;
   background-color: #fcfafa;
   padding: 20px;
@@ -225,7 +229,7 @@ img {
 }
 
 .excerption h3 {
-  color: #263555;
+  color: var(--main-font-color);
   margin-bottom: 10px;
   font-size: 16pt;
   text-align: center;
@@ -247,7 +251,7 @@ img {
 
 .columns {
   column-count: 2;
-  color: #263555;
+  color: var(--main-font-color);
 }
 
 .columns li:before {
@@ -265,9 +269,9 @@ img {
   margin-bottom: 10px;
 }
 
-/*-----FOOTER-----*/
+/*-----NAV SECTION-----*/
 
-.menu-footer {
+.nav-section {
   background-color: #30455b;
   width: 950px;
   margin: auto;
@@ -279,17 +283,52 @@ img {
   font-size: 18px;
 }
 
-.menu-footer li {
-  flex-basis: 22%;
+.menu-part {
+  flex-basis: 75%;
+  align-items: center;
+  padding-left: 50px;
 }
 
-.menu-footer a {
-  text-decoration: none;
-  color: #fff;
+.contacts-part {
+  flex-basis: 15%;
 }
+
+.menu-part ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.menu-part li {
+  flex-basis: 33%;
+  justify-content: center;
+}
+
+.menu-part a {
+  text-decoration: none;
+  color: var(--second-font-color);
+}
+
+.contacts-part {
+  display: flex;
+  flex-wrap: wrap;
+  text-transform: uppercase;
+  font-size: 18px;
+}
+
+.contacts-part a {
+  flex-basis: 45%;
+  text-decoration: none;
+  color: var(--second-font-color);
+}
+
+.contacts-part a:hover {
+  color: var(--hover-color);
+}
+
+/*----FOOTER-----*/
 
 .footer p {
-  color: #fff;
+  color: var(--second-font-color);
   text-align: center;
   font-size: 13px;
 }
@@ -302,7 +341,7 @@ img {
 
 .social-icons a {
   text-decoration: none;
-  background-color: #fff;
+  background-color: var(--main-background-color);
   border-radius: 50%;
 }
 
@@ -311,22 +350,31 @@ img {
   height: 30px;
 }
 
-.to-top-bottom {
-    position: fixed;
-    bottom: 250px;
-    right: 205px;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: #38afe5;
-    border-radius: 100%;
-    color: var(--second-font-color);
-    vertical-align: middle;
-    text-align: center;
-    text-decoration: none;
-    line-height: 30px;
-  }
+.social-icons img:hover {
+  transform: scale(1.5);
+  transition-duration: 0.15s;
+}
 
-  .to-top-bottom:before {
-    content: "\21D1";
-  }
+.to-top-bottom {
+  position: fixed;
+  bottom: 250px;
+  right: 205px;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #38afe5;
+  border-radius: 100%;
+  color: var(--second-font-color);
+  vertical-align: middle;
+  text-align: center;
+  text-decoration: none;
+  line-height: 30px;
+}
+
+.to-top-bottom:before {
+  content: "\21D1";
+}
+
+.to-top-bottom:hover {
+  background-color: var(--hover-color);
+}
