--- a/html-css/module-06/css/variables.css
+++ b/html-css/module-06/css/variables.css
@@ -1,7 +1,13 @@
 :root {
- --main-font-color: #263555;
- --second-font-color: #fff;
- --main-font-size: 16px;
- --main-font-weight: 400;
- --fat-font-weight: 600;
-}
+    --main-font-color: #263555;
+    --second-font-color: #ffffff;
+    
+    --main-background-color: #ffffff;
+   
+    --main-font-size: 16px;
+   
+    --hover-color: #DB7093;
+    
+    --main-font-weight: 400;
+    --fat-font-weight: 600;
+   }
