--- a/html-css/module-07/css/styles.css
+++ b/html-css/module-07/css/styles.css
@@ -21,10 +21,17 @@ a {
   background-color: RGBA(0, 0, 0, 0.5);
 }
 
-.container {
+.container-promo {
   max-width: 58.43rem;
   margin: auto;
 }
+
+.container {
+  max-width: 58.43rem;
+  margin: auto;
+  padding: 6rem 0;
+}
+
 
 .masthead {
   display: flex;
@@ -38,7 +45,6 @@ a {
   font-weight: 400;
   color: #fed136;
   font-size: 1.625rem;
-  padding-bottom: 0.625rem;
 }
 
 .logo:hover {
@@ -78,11 +84,8 @@ a {
 }
 
 .promo {
-  min-height: 36.25rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  margin-top: 8rem;
   color: var(--main-font-color);
 }
 
@@ -102,6 +105,7 @@ a {
 }
 
 .btn {
+  display: inline-block;
   border: 0.125rem solid #fed136;
   text-transform: uppercase;
   font-family: Montserrat, sans-serif;
@@ -121,16 +125,11 @@ a {
 
 /*-----SERVICES-----*/
 
-.services-wrapper {
-  min-height: 35rem;
-}
+
 
 .section-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 16.25rem;
+  text-align: center;
+  margin-bottom: 6rem; 
 }
 
 .section-header-title {
@@ -149,15 +148,15 @@ a {
   font-weight: 400;
 }
 
-.services-item {
+.services-list {
   display: flex;
-  min-height: 16.25rem;
+  justify-content: space-between;
 }
 
 .services-card {
-  flex-basis: 33%;
+  flex: 0 0 30%;
   text-align: center;
-  margin-right: 3.125rem;
+
 }
 
 .services-card:last-child {
@@ -212,12 +211,18 @@ a {
 /*-----CONTACTS-----*/
 
 .contact-wrapper {
-  min-height: 40.625rem;
   background-image: url("../img/bg-img-contact-map.png"),
     url("../img/bg-img-contact.png");
   background-repeat: no-repeat;
   background-size: auto, cover;
   background-position: right;
+  padding: 6rem 0;
+}
+
+.section {
+  max-width: 58.43rem;
+  margin: auto;
+  
 }
 
 .section-header-title-contact {
@@ -230,13 +235,10 @@ a {
 }
 
 .contact-form {
-  margin-bottom: 1.875rem;
-}
-
-.contact-form form {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  min-height: 13.125rem;
+  margin-bottom: 1.875rem;
 }
 
 .contact-form-bio,
@@ -284,7 +286,6 @@ input:invalid {
 }
 
 .contact-form-message {
-  display: flex;
   align-items: center;
   margin-left: 1rem;
 }
@@ -306,6 +307,7 @@ textarea::placeholder {
 }
 
 .btn-send {
+  flex: 0 0 35%;
   border: 0.125rem solid #fed136;
   text-transform: uppercase;
   font-family: Montserrat, sans-serif;
@@ -316,7 +318,7 @@ textarea::placeholder {
   padding: 1.5625rem 3.125rem;
   border-radius: 3px;
   display: block;
-  margin: auto;
+  margin-top: 3rem;
 }
 
 .btn-send:hover {
