--- a/html-css/module-08/css/styles.css
+++ b/html-css/module-08/css/styles.css
@@ -3,8 +3,8 @@
 @import url("variables.css");
 
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
 
 a {
   text-decoration: none;
@@ -59,7 +59,7 @@ a {
   border-radius: 20px;
 }
 
-logo {
+.logo {
   font-family: Montserrat, sans-serif;
   font-weight: 700;
   padding-top: 7.5rem;
@@ -117,13 +117,20 @@ logo {
   margin-bottom: 1.25rem;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .people-card {
+  flex-basis: 62.5%;
   text-align: center;
   margin-bottom: 1.875rem;
-  padding: 0 1.25rem;  
 }
 
 .people-photo {
+  width: 7.5rem;
   margin-bottom: 1.25rem;
 }
 
@@ -164,9 +171,14 @@ logo {
     flex-direction: row-reverse;
   }
 
-  logo {
+  .logo {
     padding: 0;
     margin-right: 50%;
+  }
+
+  .promo {
+    width: 50%;
+    margin: auto;
   }
 
   .promo-title {
@@ -186,17 +198,18 @@ logo {
 
   .people-container {
     max-width: 50rem;
-    text-align: center;
   }
 
   .card-container {
+    width: 60%;
+    margin: auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
 
   .people-card {
-    flex: 0 0 45%;
+    flex: 0 0 43%;
   }
 }
 
@@ -208,13 +221,14 @@ logo {
   }
 
   .card-container {
+    width: 65%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
 
   .people-card {
-    flex: 0 0 20%;
+    flex: 0 0 22%;
     margin-bottom: 2.5rem;
   }
 
