--- a/html-css/module-08/css/styles.css
+++ b/html-css/module-08/css/styles.css
@@ -11,6 +11,7 @@ a {
   display: inline-block;
   color: var(--main-font-color);
 }
+
 /*-----MASTHEAD-----*/
 
 .masthead-wrapper {
@@ -40,6 +41,8 @@ a {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-left: 1.625rem; 
+  padding-right: 1.625rem; 
 }
 
 .login {
@@ -62,14 +65,11 @@ a {
 .logo {
   font-family: Montserrat, sans-serif;
   font-weight: 700;
-  padding-top: 7.5rem;
+  margin-top: 7.5rem;
 }
 
 .promo {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
 }
 
 .promo-title {
@@ -129,6 +129,10 @@ a {
   margin-bottom: 1.875rem;
 }
 
+.people-card:last-child {
+  margin: 0;
+}
+
 .people-photo {
   width: 7.5rem;
   margin-bottom: 1.25rem;
@@ -167,13 +171,12 @@ a {
   }
 
   .masthead {
-    display: flex;
     flex-direction: row-reverse;
+    justify-content: space-between;
   }
 
   .logo {
-    padding: 0;
-    margin-right: 50%;
+    margin: 0;
   }
 
   .promo {
@@ -201,7 +204,8 @@ a {
   }
 
   .card-container {
-    width: 60%;
+    min-width: 20rem;
+    max-width: 58.75rem;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
@@ -211,9 +215,13 @@ a {
   .people-card {
     flex: 0 0 43%;
   }
+
+  .people-card:nth-child(n+3) {
+    margin: 0;
+  }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: 940px) {
   .people-container {
     max-width: 80rem;
     display: block;
@@ -221,15 +229,16 @@ a {
   }
 
   .card-container {
-    width: 65%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin-bottom: 1.875rem;
   }
 
   .people-card {
     flex: 0 0 22%;
     margin-bottom: 2.5rem;
+    margin: 0;
   }
 
   .people-title {
