--- a/html-css/module-09/css/styles.css
+++ b/html-css/module-09/css/styles.css
@@ -29,6 +29,7 @@ a {
 }
 
 .container {
+  min-width: 20rem;
   color: var(--main-font-color);
   padding-top: 2.5rem;
 }
@@ -105,7 +106,6 @@ a {
 .people-card {
   text-align: center;
   margin-bottom: 1.875rem;
-  position: relative;
 }
 
 .people-card:last-child {
@@ -132,19 +132,9 @@ a {
   line-height: 1.5;
 }
 
-/*.people-card i {
-  background-image: url("/img/icon-tv.png");
-  background-color: #ff4e50;
-  border-radius: 50%;
-  border: 4px solid #fff;
-  width: 1.875rem;
-  height: 1.875rem;
-  background-size: cover;
-  background-position: center;
-  position: absolute;
-  right: 20%;
-  bottom: 50%;
-}*/
+.people-img {
+  position: relative;
+}
 
 .icon-for-hunter,
 .icon-for-marsha,
@@ -157,8 +147,8 @@ a {
   background-size: cover;
   background-position: center;
   position: absolute;
-  right: 20%;
-  bottom: 50%;
+  right: 17%;
+  bottom: 20%;
 }
 
 .icon-for-hunter {
