--- a/html-css/module-09/css/styles.css
+++ b/html-css/module-09/css/styles.css
@@ -112,11 +112,6 @@ a {
   margin: 0;
 }
 
-.people-photo {
-  width: 7.5rem;
-  margin-bottom: 1.25rem;
-}
-
 .people-name {
   font-size: 0.875rem;
   font-family: Montserrat, sans-serif;
@@ -133,7 +128,14 @@ a {
 }
 
 .people-img {
+  width: 7.5rem;
   position: relative;
+  margin: auto;
+}
+
+.people-photo {
+  max-width: 100%;
+  margin-bottom: 1.25rem;
 }
 
 .icon-for-hunter,
@@ -147,7 +149,7 @@ a {
   background-size: cover;
   background-position: center;
   position: absolute;
-  right: 18%;
+  right: 5px;
   bottom: 20%;
 }
 
