--- a/html-css/module-11/src/sass/styles.scss
+++ b/html-css/module-11/src/sass/styles.scss
@@ -2,17 +2,11 @@
    Import partials below
 */
 @import "normalize";
+@import "variables";
 @import "promo";
 @import "services";
 @import "team";
 @import "footer";
-
-$main-font-color: #ffffff;
-$second-font-color: #333333;
-$third-font-color: #f38181;
-$main-font-family: Montserrat, sans-serif;
-$second-font-family: Roboto, sans-serif;
-$third-font-family: Kaushan Script, sans-serif;
 
 html {
   box-sizing: border-box;
